--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Escola</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -15,23 +16,74 @@
     <ul class="cabecalho-lista-item">
         <li class="cabecalho-lista-item">Estudante</li>
         <li class="cabecalho-lista-item">Escola</li>
-    
+
     </ul>
 </header>
 <section class="escola">
     <div class="escola-conteudo">
         <h2 class="escola-titulo">Sobre a Escola</h2>
-        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série B. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional
+            através da Programação.</p>
+        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série B. Uma turma diversa e engajada, as vezes, um
+            pouco bagunceira, mas que entrega excelentes resultados!</p>
     </div>
     <img class="escola-imagem" src="./img/img2.png" alt="Professor no quadro">
 </section>
 <section class="estudante">
-    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-    <h3>Marcelo</h3>
-    <img class="estudante-icone" src="./img/instagram.png">
-    <img class="estudante-icone" src="./img/whatsapp.png">
-    <img class="estudante-icone" src="./img/twitter.png">
+    <h2 class="estudante-titulo">Quem são nossos jogadores?</h2>
+    <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/erick.png" alt="Foto Erick">
+            <h3>Erick</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/calleri.png" alt="Foto Calleri">
+            <h3>Calleri</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/jamesrodriguez.png" alt="Foto James Rodriguez">
+            <h3>James Rodriguez</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/rato.png" alt="Foto Rato">
+            <h3>W Rato</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/ferreira.png" alt="Foto Ferreira">
+            <h3>Ferreira</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/arboleda.png" alt="Foto Arboleda">
+            <h3>Arboleba</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/luciano.png" alt="Foto Luciano">
+            <h3>Luciano</h3>
+            <img class="estudante-icone" src="./img/instagram.png">
+            <img class="estudante-icone" src="./img/whatsapp.png">
+            <img class="estudante-icone" src="./img/twitter.png">
+        </div>
+    </div>
 </section>
 </html>
