--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 </header>
 <section class="escola">
     <div class="escola-conteudo">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <h2 class="escola-titulo">SÃO PAULO FC</h2>
         <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional
             através da Programação.</p>
         <p class="escola-texto-dois">A turma mais famosa é a Segunda Série B. Uma turma diversa e engajada, as vezes, um
             pouco bagunceira, mas que entrega excelentes resultados!</p>
     </div>
-    <img class="escola-imagem" src="./img/img2.png" alt="Professor no quadro">
+    <img class="escola-imagem" src="./img/brasaosp.png" alt="Logo do São Paulo FC">
 </section>
 <section class="estudante">
     <h2 class="estudante-titulo">Quem são nossos jogadores?</h2>
@@ -36,53 +36,67 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/erick.png" alt="Foto Erick">
             <h3>Erick</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="https://www.instagram.com/erick/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/calleri.png" alt="Foto Calleri">
             <h3>Calleri</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="https://www.instagram.com/jocalleri/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/jamesrodriguez.png" alt="Foto James Rodriguez">
             <h3>James Rodriguez</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="https://www.instagram.com/jamesrodriguez10/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/rato.png" alt="Foto Rato">
             <h3>W Rato</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/ferreira.png" alt="Foto Ferreira">
             <h3>Ferreira</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/arboleda.png" alt="Foto Arboleda">
             <h3>Arboleba</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/luciano.png" alt="Foto Luciano">
             <h3>Luciano</h3>
-            <img class="estudante-icone" src="./img/instagram.png">
-            <img class="estudante-icone" src="./img/whatsapp.png">
-            <img class="estudante-icone" src="./img/twitter.png">
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/rafinha.png" alt="Foto Rafinha">
+            <h3>Rafinha</h3>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/rafael.png" alt="Foto Rafael">
+            <h3>Rafael</h3>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
+            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
         </div>
     </div>
 </section>
