--- a/index.html
+++ b/index.html
@@ -38,66 +38,69 @@
             <h3>Erick</h3>
             <a href="https://www.instagram.com/erick/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Erick_de_Arruda_Serafim" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/calleri.png" alt="Foto Calleri">
             <h3>Calleri</h3>
             <a href="https://www.instagram.com/jocalleri/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Jonathan_Calleri" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/jamesrodriguez.png" alt="Foto James Rodriguez">
             <h3>James Rodriguez</h3>
             <a href="https://www.instagram.com/jamesrodriguez10/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/James_Rodr%C3%ADguez" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/rato.png" alt="Foto Rato">
             <h3>W Rato</h3>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="https://www.instagram.com/wellingtonratooficial/?hl=pt" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Wellington_Rato" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/ferreira.png" alt="Foto Ferreira">
             <h3>Ferreira</h3>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="https://www.instagram.com/ferreirinha/?hl=pt-br" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Aldemir_Ferreira" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/arboleda.png" alt="Foto Arboleda">
             <h3>Arboleba</h3>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="https://www.instagram.com/robertharboleda4/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Robert_Arboleda" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/luciano.png" alt="Foto Luciano">
             <h3>Luciano</h3>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="https://www.instagram.com/lucianoneves10/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Luciano_da_Rocha_Neves" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/rafinha.png" alt="Foto Rafinha">
             <h3>Rafinha</h3>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="https://www.instagram.com/r_13official/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/M%C3%A1rcio_Rafael_Ferreira_de_Souza" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./img/rafael.png" alt="Foto Rafael">
             <h3>Rafael</h3>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
+            <a href="https://www.instagram.com/goleiro_rafael/" target="_blank"><img class="estudante-icone" src="./img/instagram.png"></a>
             <a href="" target="_blank"><img class="estudante-icone" src="./img/tiktok.png"></a>
-            <a href="" target="_blank"><img class="estudante-icone" src="./img/twitter.png"></a>
+            <a href="https://pt.wikipedia.org/wiki/Rafael_Pires_Monteiro" target="_blank"><img class="estudante-icone" src="./img/wikipedia.png"></a>
         </div>
     </div>
 </section>
+<footer>
+    <img class="rodape-imagem" src="./img/img1.png" alt="Logo Alura Start">
+</footer>
 </html>
